HHGTTG reference is best reference

--- a/views/maintenance.haml
+++ b/views/maintenance.haml
@@ -2,4 +2,5 @@
   .text_content_wrapper
     .text_content
       %h2.hcenter
-        We're currently down for maintenance. We'll be back in no time!
+        We're currently down for maintenance.
+        We apologise for the inconvenience.
