--- a/views/activity.haml
+++ b/views/activity.haml
@@ -27,14 +27,14 @@
                 %tr{:id => style}
                   %td.table_date= h Time.at(datum).getutc.strftime("%Y-%m-%d")
                   - $variants.each do |v|
-                    - finished_variant_games_per_day = repository.adapter.select "select count(1) from games where user_id > 0 and version = ? and endtime >= ? and endtime < ?;", v, datum, datum+86400
+                    - finished_variant_games_per_day = (repository.adapter.select "select count(1) from games where user_id > 0 and version = ? and endtime >= ? and endtime < ?;", v, datum, datum+86400)[0]
                     %td.table_number= finished_variant_games_per_day
             -# Total number of tournament games per variant
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             %tr{:id => style}
               %td.table_date= "Total"
               - $variants.each do |v|
-                - finished_variant_games = repository.adapter.select "select count(1) from games where user_id > 0 and version = ?;", v
+                - finished_variant_games = (repository.adapter.select "select count(1) from games where user_id > 0 and version = ?;", v)[0]
                 %td.table_number= finished_variant_games
 
     - cache_fragment("ascensions_#{Game.max_ascended_endtime}") do
@@ -64,7 +64,7 @@
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             %tr{:id => style}
               %td.table_date= "Total"
-              %td.table_number= repository.adapter.select "select count(1) from games where user_id > 0 and ascended='t';"
+              %td.table_number= (repository.adapter.select "select count(1) from games where user_id > 0 and ascended='t';")[0]
           - graph.write("activity")
 
 
@@ -93,7 +93,7 @@
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             %tr{:id => style}
               %td.table_date= "Total"
-              %td.table_number= repository.adapter.select "select count(1) from games where user_id > 0;"
+              %td.table_number= (repository.adapter.select "select count(1) from games where user_id > 0;")[0]
           - graph.write("finished_games_per_day")
 
     - cache_fragment("users_#{User.max_created_at}") do
@@ -122,5 +122,5 @@
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             %tr{:id => style}
               %td.table_date= "Total"
-              %td.table_number= repository.adapter.select "select count(1) from users;"
+              %td.table_number= (repository.adapter.select "select count(1) from users;")[0]
           - graph.write("new_users_per_day")
