Move news into database
News are HTML snippets that are saved in the table News in the database.
They are manipulated with these new Rake tasks:

 news:add[html_snippet]
 news:delete[id]
 news:update[id,html_snippet]
 news:list

--- a/views/news.haml
+++ b/views/news.haml
@@ -1,10 +1,6 @@
 %h2
   News and Info
 %ul
-  %li= "<b>2012-07-01</b>: Junethack 2012 is over. Thanks for playing!"
-  %li= "<b>2012-06-21</b>: 3000 games have been played!"
-  %li= "<b>2012-06-11</b>: 125 players have signed up!"
-  %li= "<b>2012-06-09</b>: Download links to dumplogs for specific servers added."
-  %li= "<b>2012-06-06</b>: Trophies for AceHack and NetHack4 should display correctly now."
-  %li= "<b>2012-06-01</b>: Junethack 2012 has started!"
-  %li= "<b>2012-05-01</b>: <a href='register'>Pre-registration for Junethack 2012</a> has been opened."
+  - news = News.all(:order => [ :updated_at.desc ])
+  - for n in news
+    %li= "<b>#{n.created_at.strftime("%Y-%m-%d")}</b>: #{n.html}"
