Add news entries to RSS feed

--- a/views/rss.haml
+++ b/views/rss.haml
@@ -6,12 +6,14 @@
     %link http://junethack.rawrnix.com/
     %description Junethack - NetHack Cross-Variant Summer Tournament
     <atom:link href="http://junethack.rawrnix.com/junethack_event.rss" rel="self" type="application/rss+xml" />
-    - events = Event.all(:order => [ :created_at.desc ])
-    - events.each do |event|
+    - events = Event.all(:order => [ :created_at.desc ], :limit => 5)
+    - news = News.all(:order => [ :created_at.desc ])
+    - entries = (news.to_a  + events.to_a).sort_by {|e| !['created_at'] }
+    - entries.each do |event|
       %item
-        %title= event.text
+        %title= event.text || event.html
         -if event.url
           %link= event.url
         %pubDate= event.created_at.strftime("%a, %d %b %Y %H:%M:%S %z")
-        %guid{:isPermaLink => "false"}= event.id
+        %guid{:isPermaLink => "false"}= event.hash
 
