Remove outdated info about user ranking

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -157,16 +157,7 @@
         %h3
           All Variants
         %p
-          These competitions apply separately to each variant.
-          First place is awarded 4 points, second place is awarded 3,
-          2 for third place. The remaining players get points according
-          to the ratio of their best evaluated game to the winner(s)' best
-          evaluated game. Only the best game for each player is considered,
-          for each category.
-        %p
-          In case of a tie, all the players with the same evaluation get
-          the same amount of points; in the ranking, they're considered
-          as one player.
+          These trophies apply separately to each variant.
         %ul.trophypage
           %li#c-most-ascensions
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-most-ascensions.png"}
@@ -200,11 +191,20 @@
               account with no games in-between.)
         .text_content.non_top_post
         %h3
-          Clan Competitions
+          Clan Competitions Trophies
         %p
-          The scores for clan competitions follow the same rules
-          as competition rules. Each player contributes to the total clan
-          score.
+          Each player of a clan contributes to the total clan score.
+          Clans are ranked according to clan score.
+        %p
+          First place is awarded 4 points, second place is awarded 3,
+          2 for third place. The remaining clans get points according
+          to the ratio of their best evaluated score to the winner clan's best
+          evaluated score.
+        %p
+          In case of a tie, all clans with the same evaluation get
+          the same amount of points; in the ranking, they're considered
+          as one clan.
+        -# example?
         %ul.trophypage
           %li#clan-24h
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-24h.png"}
