--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -10,21 +10,21 @@
           Cross-Variant
         %ul.trophypage
           %li#sightseeing
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/sightseeing.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/sightseeing.png"}
             %span
               Sightseeing tour: finish a game in all variants.
               Each variant must have a game that has been played for at
               least 1000 turns.
           %li#globetrotter
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/globetrotter.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/globetrotter.png"}
             %span
               Globetrotter: get a trophy for each variant.
           %li#anti-stoner
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/anti-stoner.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/anti-stoner.png"}
             %span
               Anti-Stoner: defeat Medusa in all variants.
           %li#king
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/king.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/king.png"}
             %span
               King of the world: ascend in all variants.
 
@@ -38,29 +38,29 @@
           %span.small_print In variants with additional roles or races only 13 roles resp. 5 races (i.e. as many as in vanilla) must be ascended to achieve this trophy.
         %ul.trophypage
           %li#all-conducts
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-conducts.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/all-conducts.png"}
             %span
               All conducts: follow each conduct in at least one ascension.
           %li#all-roles
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-roles.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/all-roles.png"}
             %span
               All roles: ascend a character for each role.
           %li#all-races
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-races.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/all-races.png"}
             %span
               All races: ascend a character of every race.
           %li#all-alignments
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-alignments.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/all-alignments.png"}
             %span
               All alignments: ascend a character of every alignment (the starting
               alignment is considered).
           %li#all-genders
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/all-genders.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/all-genders.png"}
             %span
               All genders: ascend a character of each gender (the starting gender
               is considered).
           %li#ascension
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/ascension.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/ascension.png"}
             %span
               Ascension: ascend a character.
           %li#m-soko
@@ -72,51 +72,51 @@
               requirement.
             %ul.trophypage{:style => "margin-left: 2em;"}
               %li
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-soko.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-soko.png"}
                 %span
                   get the Sokoban prize (get an Oracle consultation)
               %li#m-luckstone
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-luckstone.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-luckstone.png"}
                 %span
                   get the luckstone from Mines' End (get accepted to quest)
               %li#m-bell
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-bell.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-bell.png"}
                 %span
                   get the Bell of Opening (defeat the quest nemesis)
               %li#m-medusa
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-medusa.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-medusa.png"}
                 %span
                   defeat Medusa
               %li#m-gehennom
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-gehennom.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-gehennom.png"}
                 %span
                   enter Gehennom (enter Gehennom the front way)
               %li#m-candelabrum
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-candelabrum.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-candelabrum.png"}
                 %span
                   get the Candelabrum of Invocation (defeat Vlad)
               %li#m-book
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-book.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-book.png"}
                 %span
                   get the Book of the Dead (defeat Rodney at least once)
               %li#m-invocation
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-invocation.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-invocation.png"}
                 %span
                   complete the invocation ritual
               %li#m-amulet
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-amulet.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-amulet.png"}
                 %span
                   get the Amulet of Yendor (defeat the High Priest of Moloch)
               %li#m-planes
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-planes.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-planes.png"}
                 %span
                   enter the elemental planes
               %li#m-astral
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-astral.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-astral.png"}
                 %span
                   enter the Astral Plane
               %li#escapologist
-                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/escapologist.png"}
+                %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/escapologist.png"}
                 %span
                   Escapologist: escape in celestial disgrace
         .text_content.non_top_post
@@ -124,31 +124,31 @@
           AceHack, NetHack4 and UnNetHack
         %ul.trophypage
           %li#m-croesus
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-croesus.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-croesus.png"}
             %span
               Assault on Fort Knox: defeat Croesus
           %li#m-sam
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-sam.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-sam.png"}
             %span
               No membership card: defeat One-Eyed Sam (UnNetHack only)
           %li#m-no-nemesis
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-no-nemesis.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-no-nemesis.png"}
             %span
               Too good for quests: ascend without defeating the quest nemesis
           %li#m-no-vlad
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-no-vlad.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-no-vlad.png"}
             %span
               Too good for Vladbanes: ascend without defeating Vlad
           %li#m-no-wizard
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-no-wizard.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-no-wizard.png"}
             %span
               Too good for... wait, what? How?: ascend without defeating Rodney
           %li#m-no-cthulhu
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-no-cthulhu.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-no-cthulhu.png"}
             %span
               Too good for a brain: ascend without defeating Cthulhu (UnNetHack only)
           %li#m-hoarder
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-hoarder.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-hoarder.png"}
             %span
               Hoarder: ascend carrying all the invocation items
         .text_content.non_top_post
@@ -160,31 +160,31 @@
           These trophies apply separately to each variant.
         %ul.trophypage
           %li#c-most-ascensions
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-most-ascensions.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-most-ascensions.png"}
             %span
               Most ascensions
           %li#c-fastest-gametime
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-fastest-gametime.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-fastest-gametime.png"}
             %span
               Fastest ascension (by turns)
           %li#c-fastest-realtime
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-fastest-realtime.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-fastest-realtime.png"}
             %span
               Fastest ascension (by wall-clock time)
           %li#c-highest-score
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-highest-score.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-highest-score.png"}
             %span
               Highest scoring ascension
           %li#c-lowest-score
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-lowest-score.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-lowest-score.png"}
             %span
               Lowest scoring ascension (not counting negative scores)
           %li#c-most-conducts
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-most-conducts.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-most-conducts.png"}
             %span
               Most conducts in a single ascension
           %li#c-longest-streak
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-longest-streak.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/c-longest-streak.png"}
             %span
               Longest ascension streak
               (non-overlapping games played on a single game server
@@ -207,22 +207,22 @@
         -# example?
         %ul.trophypage
           %li#clan-24h
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-24h.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-24h.png"}
             %span
               Most ascensions in a 24 hour period
           %li#clan-combinations
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-combinations.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-combinations.png"}
             %span
               Most ascended variant/role/race/alignment/gender combinations (starting)
           %li#clan-points
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-points.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-points.png"}
             %span
               Most points
           %li#clan-deaths
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-deaths.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-deaths.png"}
             %span= "Most unique deaths (<a href='/deaths#unique_deaths'>look here for unique deaths of played games</a>)"
           %li#clan-variant-trophies
-            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-variant-trophies.png"}
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-variant-trophies.png"}
             %span
               Most variant/trophy combinations
         .text_content.non_top_post
