Add 4 new cross variant achievements
- Walk in the Park: finish a game in half of the variants.
- Backpacking Tourist: get a trophy for half of the variants.
- Hemi-Stoner: defeat Medusa in half of the variants.
- Prince of the World: ascend in half of the variants.

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -10,23 +10,37 @@
           Cross-Variant
         %ul.trophypage
           %li#sightseeing
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/backpacking_tourist.png"}
+            %span
+              Walk in the Park: finish a game in half of the variants (played for at least 1000 turns).
+          %li#sightseeing
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/sightseeing.png"}
             %span
-              Sightseeing tour: finish a game in all variants.
-              Each variant must have a game that has been played for at
-              least 1000 turns.
+              Sightseeing Tour: finish a game in all variants (played for at least 1000 turns).
+          %li#backpacking_tourist
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/backpacking_tourist.png"}
+            %span
+              Backpacking Tourist: get a trophy for half of the variants.
           %li#globetrotter
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/globetrotter.png"}
             %span
               Globetrotter: get a trophy for each variant.
+          %li#hemi-stoner
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/hemi-stoner.png"}
+            %span
+              Hemi-Stoner: defeat Medusa in half of the variants.
           %li#anti-stoner
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/anti-stoner.png"}
             %span
               Anti-Stoner: defeat Medusa in all variants.
+          %li#prince
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/prince.png"}
+            %span
+              Prince of the World: ascend in half of the variants.
           %li#king
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/king.png"}
             %span
-              King of the world: ascend in all variants.
+              King of the World: ascend in all variants.
 
         %p.small_print "All variants" means Vanilla NetHack, SporkHack, UnNetHack, AceHack, GruntHack, NetHack4.
         .text_content.non_top_post
