--- a/views/register.haml
+++ b/views/register.haml
@@ -2,9 +2,14 @@
   .text_content_wrapper
     .text_content
       - if (Time.new.to_i > $tournament_endtime)
-        %h1.hcenter Sorry, this year's tournament year has ended.
+        %h1.hcenter Sorry, this year's tournament has ended.
       - elsif (Time.new.to_i < $tournament_signupstarttime)
-        %h1.hcenter Sorry, registration opens in 1 May.
+        - t = Time.at($tournament_signupstarttime)
+        - day = t.strftime('%d').to_i
+        - month = t.strftime('%B ')
+        - signupstart = "#{month} #{day}"+([nil,'st','nd','rd'][((day)%10)]||'th')
+        %h1.hcenter
+          Sorry, registration opens on #{signupstart}.
       - else
         %form#register_form{:action => "/create", :method => "post"}
           %fieldset
