--- a/views/splash.haml
+++ b/views/splash.haml
@@ -19,7 +19,7 @@
     - if now < $tournament_signupstarttime
       .title_text
         %p
-          Registration opens in May
+          =haml :registrationdate
   .text_content_wrapper
     .text_content
       %h2
