Change all links to the new url junethack.de
Closes ticket #25

--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -11,9 +11,9 @@
       %title= "Junethack - #{User.count} players registered - #{games_count} games played!"
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Junethack" />
-    <meta property="og:url" content="http://junethack.rawrnix.com/" />
+    <meta property="og:url" content="http://junethack.de/" />
     <meta property="og:description" content="The NetHack Cross-Variant Summer Tournament" />
-    <meta property="og:image" content="http://junethack.rawrnix.com/vivid_divider.png" />
+    <meta property="og:image" content="http://junethack.de/apple-touch-icon.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Turn off telephone number detection on iOS. -->
