--- a/views/layout.haml
+++ b/views/layout.haml
@@ -13,6 +13,7 @@
     <meta property="og:url" content="http://junethack.de/" />
     <meta property="og:description" content="The NetHack Cross-Variant Summer Tournament" />
     <meta property="og:image" content="http://junethack.de/apple-touch-icon.png" />
+    <link rel="alternate" type="application/rss+xml" title="Junethack" href="http://junethack.de/junethack.rss" />
 
   %body
     #container
