Correct link anchor and image for walk in the park

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -9,8 +9,8 @@
         %h3
           Cross-Variant
         %ul.trophypage
-          %li#sightseeing
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/backpacking_tourist.png"}
+          %li#walk_in_the_park
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/walk_in_the_park.png"}
             %span
               Walk in the Park: finish a game in half of the variants (played for at least 1000 turns).
           %li#sightseeing
