--- a/views/servers.haml
+++ b/views/servers.haml
@@ -33,19 +33,6 @@
             &nbsp;
         %tr
           %td
-            nethack.fi
-          %td
-            %a{:href => "/server/nfi"} NFI
-          %td
-            vanilla
-          %td
-            &nbsp;
-          %td
-            paxed, ...
-          %td
-            &nbsp;
-        %tr
-          %td
             nethack.eu
           %td
             %a{:href => "/server/neu"} NEU
@@ -85,19 +72,6 @@
             &nbsp;
         %tr
           %td
-            acehack.us
-          %td
-            %a{:href => "/server/aus"} AUS
-          %td
-            acehack
-          %td
-            &nbsp;
-          %td
-            rawrmage
-          %td
-            &nbsp;
-        %tr
-          %td
             grunthack.org
           %td
             %a{:href => "/server/gho"} GHO
@@ -120,6 +94,19 @@
             &nbsp;
           %td
             ais523
+          %td
+            &nbsp;
+        %tr
+          %td
+            acehack.de
+          %td
+            %a{:href => "/server/ade"} ADE
+          %td
+            acehack
+          %td
+            &nbsp;
+          %td
+            stenno
           %td
             &nbsp;
       %span#end_of_content_spacer.clear
