--- a/views/home.haml
+++ b/views/home.haml
@@ -3,6 +3,7 @@
         .text_content
             %h2
                 Manage your accounts
+            -# determine which servers have no account linked
             - server_accounts = (Server.all - @user.servers)
             - if server_accounts.size > 0
                 #greeting
@@ -50,10 +51,10 @@
             =haml :ascended_combinations
         #clanmanager.text_content.non_top_post
             %h2
-                Manage your clans
+                Manage your clan
             - for account in @user.accounts
                 .account-clan
-                    %h3= account.name + " on " + account.server.name
+                    %h3= account.name
                     - if account.clan
                         %a{:href => "/clan/#{CGI::escape account.clan.name}"}= account.clan.name
                         %a{:href => "/leaveclan/#{account.server.id}"} Leave
@@ -69,7 +70,7 @@
                                 %table
                                     %tr
                                         %th Clan
-                                        %th Accept 
+                                        %th Accept
                                         %th Decline
                                         - for invitation in account.invitations
                                             %tr
@@ -86,11 +87,7 @@
             %div.text_content.non_top_post
                 %h2 Create a new clan
                 %form#create_clan_form.smallform{:method => "POST", :action => "/clan"}
-                    %label{:for => "server"}  Creator account
-                    %select{:name => "server"}
-                        - for acc in clanless_accs
-                            %option{:value => acc.server.id}= "#{acc.name} on #{acc.server.name}"
-
+                    %input{:type => "hidden", :value => clanless_accs.first.server.id, :name => "server"}
                     %label{:for => "clanname"} Clan name
                     %input#clanname{:name => "clanname", :type => "text"}
                     %input{:type => "submit", :value => "Create clan"}
