--- a/views/rss.haml
+++ b/views/rss.haml
@@ -6,9 +6,9 @@
     %link http://junethack.de/
     %description Junethack - NetHack Cross-Variant Summer Tournament
     <atom:link href="http://junethack.de/junethack.rss" rel="self" type="application/rss+xml" />
-    - events = Event.all(:order => [ :created_at.desc ], :limit => 5)
+    - events = Event.all(:order => [ :created_at.desc ], :limit => 30)
     - news = News.all(:order => [ :created_at.desc ])
-    - entries = (news.to_a  + events.to_a).sort_by {|e| !['created_at'] }
+    - entries = (news.to_a  + events.to_a).sort_by {|e| e['created_at'] }
     - entries.each do |event|
       %item
         %title= event.text || event.html
