--- a/views/index.haml
+++ b/views/index.haml
@@ -8,9 +8,9 @@
 		%div Log in
 		%form#login{:method => 'POST', :action => '/login'}
 			%label{:for => 'username'} Username
-			%input#username{:type => 'text', :name => "username"}
+			%input#username{:type => 'text', :name => "username", :placeholder => "username"}
 			%label{:for => 'password'} Password
-			%input#password{:type => 'password', :name => "password"}
+			%input#password{:type => 'password', :name => "password", :placeholder => "password"}
 			%input#create{:type => 'submit'}
 		%div
 			%a{:href => "/register"} or register
