--- a/views/login.haml
+++ b/views/login.haml
@@ -9,13 +9,13 @@
         %fieldset
           #username_row
             %label{:for => "username"} Username:
-            %input#username{:name => "username", :type => "textbox", :value => "", :autofocus => ""}/
+            %input#username{:name => "username", :type => "textbox", :value => "", :autofocus => "", :placeholder => "username"}/
             .form_msg
               Field required
             %span.clear
           #password_row
             %label{:for => "password"} Password:
-            %input#password{:name => "password", :type => "password", :value => ""}/
+            %input#password{:name => "password", :type => "password", :value => "", :placeholder => "password"}/
             .form_msg
               Field required
             %span.clear
