--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -165,6 +165,10 @@
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-hoarder.png"}
             %span
               Hoarder: ascend carrying all the invocation items
+          %li#heaven-or-hell
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/heaven-or-hell.png"}
+            %span
+              Heaven or Hell: ascend in "Heaven or Hell" mode (monsters and player only have 1 HP) (Acehack and UnNetHack only)
         .text_content.non_top_post
         %h2
           Competitions
