New clan trophy: Most Medusa kills

--- a/views/clan_competition.haml
+++ b/views/clan_competition.haml
@@ -13,3 +13,5 @@
       =haml :clan_competition_trophy
       - @trophy = "most_variant_trophy_combinations"
       =haml :clan_competition_trophy
+      - @trophy = "most_medusa_kills"
+      =haml :clan_competition_trophy
