Most games with all conducts broken

--- a/views/clan_competition.haml
+++ b/views/clan_competition.haml
@@ -15,3 +15,5 @@
       =haml :clan_competition_trophy
       - @trophy = "most_medusa_kills"
       =haml :clan_competition_trophy
+      - @trophy = "most_full_conducts_broken"
+      =haml :clan_competition_trophy
