Replace "Most points" with "Most logarithmic points"

--- a/views/clan_competition.haml
+++ b/views/clan_competition.haml
@@ -3,7 +3,7 @@
     .text_content
       %h1 Clan Competition Overview
       =haml :_clan_trophies
-      - @trophy = "most_points"
+      - @trophy = "most_log_points"
       =haml :clan_competition_trophy
       - @trophy = "most_ascended_combinations"
       =haml :clan_competition_trophy
