Add new clan trophies to clan score calculation

--- a/views/clan_points_summary.haml
+++ b/views/clan_points_summary.haml
@@ -16,7 +16,7 @@
       - count += 1
       %tr{:id => style}
         %td
-          #{h $trophy_names[entry.trophy]}
+          #{h Trophy.first(:trophy => entry.trophy).text}
         %td.table_number
           #{h entry.value}
         %td.table_number
