--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -235,7 +235,7 @@
           %li#clan-points
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-points.png"}
             %span
-              Most points
+              Most logarithmic points
           %li#clan-deaths
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-deaths.png"}
             %span= "Most unique deaths (<a href='/deaths#unique_deaths'>look here for unique deaths of played games</a>)"
@@ -243,5 +243,13 @@
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-variant-trophies.png"}
             %span
               Most variant/trophy combinations
+          %li#clan-most-medusa-kills
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-medusa-kills.png"}
+            %span
+              Most Medusa kills
+          %li#clan-full-conducts-broken
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/clan-full-conducts-broken.png"}
+            %span
+              Most games with all conducts broken
         .text_content.non_top_post
     %span#end_of_content_spacer.clear
