--- a/views/about.haml
+++ b/views/about.haml
@@ -4,7 +4,7 @@
       %p
         This is the NetHack Cross-Variant Summer Tournament. It runs annually during June.
       %p
-        NetHack is a classic roguelike game. If you don't what that is, try using
+        NetHack is a classic roguelike game. If you don't know what that is, try using
         a Google search.
       %p
         You can check out tournament rules from the
