New achievement: Mini-Croesus
Finish a game with at least 100,000 gold pieces

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -169,6 +169,10 @@
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/heaven-or-hell.png"}
             %span
               Heaven or Hell: ascend in "Heaven or Hell" mode (monsters and player only have 1 HP) (Acehack and UnNetHack only)
+          %li#m-mini-croesus
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-mini-croesus.png"}
+            %span
+              Mini-Croesus: finish a game with at least 100,000 gold pieces (UnNetHack only)
         .text_content.non_top_post
         %h2
           Competitions
