Add hardcoded vanilla acehack data

--- a/views/servers.haml
+++ b/views/servers.haml
@@ -93,7 +93,20 @@
           %td
             &nbsp;
           %td
-            stenno
+            kerio
+          %td
+            &nbsp;
+        %tr
+          %td
+            acehack.de
+          %td
+            %a{:href => "/server/nde"} NDE
+          %td
+            acehack
+          %td
+            &nbsp;
+          %td
+            kerio
           %td
             &nbsp;
       %span#end_of_content_spacer.clear
