Make URL scheme variable

--- a/views/activity.haml
+++ b/views/activity.haml
@@ -1,4 +1,4 @@
-%script{:type => "text/javascript", :src => "http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"}
+%script{:type => "text/javascript", :src => "https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"}
 %script{:type => "text/javascript", :src => "/graph/highcharts.js"}
 %script{:type => "text/javascript", :src => "/graph/graph_ascensions.js"}
 %script{:type => "text/javascript", :src => "/graph/graph_finished_games_per_day.js"}
