Revert "rm superfluous tag"
This reverts commit 2473e08750f9f80a88521c7687fa3531c414a12b.

--- a/views/register.haml
+++ b/views/register.haml
@@ -11,13 +11,13 @@
           %fieldset
             #username_row
               %label{:for => "username"} Username:
-              %input#username{:name => "username", :type => "textbox", :value => "", :autofocus => "", :placeholder => "username", :required}/
+              %input#username{:name => "username", :type => "textbox", :value => "", :autofocus => "", :placeholder => "username", :required => "required"}/
               .form_msg
                 Field required
               %span.clear
             #password_row
               %label{:for => "password"} Password:
-              %input#password{:name => "password", :type => "password", :value => "", :placeholder => "password", :required}/
+              %input#password{:name => "password", :type => "password", :value => "", :placeholder => "password", :required => "required"}/
               .form_msg
                 Field required
               %span.clear
