--- a/views/servers.haml
+++ b/views/servers.haml
@@ -102,7 +102,7 @@
           %td
             %a{:href => "/server/nde"} NDE
           %td
-            acehack
+            vanilla
           %td
             &nbsp;
           %td
