--- a/views/home.haml
+++ b/views/home.haml
@@ -40,6 +40,8 @@
                     =haml :user_cross_variant_trophies
                     - for @variant in $variants
                         =haml :user_trophies
+                    - @variant = "NH-1.3d"
+                    =haml :user_trophies
 
         .text_content.non_top_post
             =haml :_user_games
