oldhack on acehack.de

--- a/views/servers.haml
+++ b/views/servers.haml
@@ -109,4 +109,17 @@
             kerio
           %td
             &nbsp;
+        %tr
+          %td
+            acehack.de
+          %td
+            %a{:href => "/server/n13"} N13
+          %td
+            oldhack
+          %td
+            &nbsp;
+          %td
+            kerio
+          %td
+            &nbsp;
       %span#end_of_content_spacer.clear
