--- a/views/rules.haml
+++ b/views/rules.haml
@@ -1,17 +1,18 @@
-.content_bulk
+#page_rules.content_bulk
   .text_content_wrapper
     .text_content
       %h1
         Rules
       %p.description
-        Rule violations will be met with dire consequences!  Dire!  And consequential!
-        (Yeah, it doesn't happen much.)
-        Staff make the final decision if it's not clear.  Here's what Junethack thinks is cheating.
+        Rule violations will be met with dire consequences! Both dire and consequential!
+        Seriously, rules here are pretty reasonable so cheating would be extremely inconsiderate.
+        Staff make the final decision if something's not clear.
+        Here's what Junethack thinks is cheating.
       %h2
         Don't:
       %ul
         %li
-          crack into one of the game servers and adding fake games or bones.
+          crack into a game server and add fake games or bones.
         %li
           exploit vulnerabilities in a weak random number generator.
         %li
@@ -27,8 +28,8 @@
         %li
           <a href='http://nethackwiki.com/wiki/Pudding_farming'>pudding farm</a>.
         %li
-          <a href='http://nethackwiki.com/wiki/Start_scumming'>start scum</a>:
-          Escaping or quitting within the first 10 turns. These games are hidden on the games tables, though.
+          <a href='http://nethackwiki.com/wiki/Start_scumming'>start scum</a>.
+          All games escaped or quit within the first 10 turns are hidden on the games tables.
         %li
             look at player 
           <a href='http://nethackwiki.com/wiki/Dumplog'>dumplogs</a>.
@@ -46,5 +47,4 @@
         %li
             in general, anything the game says you can do. (whew!)
 
-      .text_content.non_top_post
     %span#end_of_content_spacer.clear
