--- a/views/rules.haml
+++ b/views/rules.haml
@@ -26,25 +26,26 @@
         Do:
       %ul
         %li
-          <a href='http://nethackwiki.com/wiki/Pudding_farming'>pudding farm</a>.
+          %a{:href => "http://nethackwiki.com/wiki/Pudding_farming"}pudding farm
+          .
         %li
-          <a href='http://nethackwiki.com/wiki/Start_scumming'>start scum</a>.
-          All games escaped or quit within the first 10 turns are hidden on the games tables.
+          %a{:href => "http://nethackwiki.com/wiki/Start_scumming"}start scum
+          . All games escaped or quit within the first 10 turns are hidden on the games tables.
         %li
             look at player 
-          <a href='http://nethackwiki.com/wiki/Dumplog'>dumplogs</a>.
+          %a{:href => "http://nethackwiki.com/wiki/Dumplog"}dumplogs
+          .
         %li
-            watch 
-            <a href='http://nethackwiki.com/wiki/Ttyrec'>ttyrecs</a>
-            of previous or current games.
+          watch 
+          %a{:href => "http://nethackwiki.com/wiki/Ttyrec"}ttyrecs
+          of previous or current games.
         %li
-            use NetHack playing bots or so called "augmentation" tools
-            like Interhack.
+          use NetHack playing bots or so called "augmentation" tools
+          like Interhack.
         %li
-            exploit well known game bugs (eg, Astral call bug, floating
-            wand wresting trick, gold duplication bug, artifact naming trick,
-            etc). Some of these may be fixed on some servers.
+          exploit well known game bugs (eg, Astral call bug, floating
+          wand wresting trick, gold duplication bug, artifact naming trick,
+          etc). Some of these may be fixed on some servers.
         %li
-            in general, anything the game says you can do. (whew!)
-
+          in general, anything the game says you can do. (whew!)
     %span#end_of_content_spacer.clear
