--- a/views/rules.haml
+++ b/views/rules.haml
@@ -26,15 +26,13 @@
         Do:
       %ul
         %li
-          %a{:href => "http://nethackwiki.com/wiki/Pudding_farming"}pudding farm
-          .
+          %a{:href => "http://nethackwiki.com/wiki/Pudding_farming"}pudding farm.
         %li
-          %a{:href => "http://nethackwiki.com/wiki/Start_scumming"}start scum
-          . All games escaped or quit within the first 10 turns are hidden on the games tables.
+          %a{:href => "http://nethackwiki.com/wiki/Start_scumming"}start scum.
+          All games escaped or quit within the first 10 turns are hidden on the games tables.
         %li
-            look at player 
-          %a{:href => "http://nethackwiki.com/wiki/Dumplog"}dumplogs
-          .
+          look at player 
+          %a{:href => "http://nethackwiki.com/wiki/Dumplog"}dumplogs.
         %li
           watch 
           %a{:href => "http://nethackwiki.com/wiki/Ttyrec"}ttyrecs
