Added mention of Junethack in text, and modified intro text somewhat.

--- a/views/splash.haml
+++ b/views/splash.haml
@@ -23,18 +23,21 @@
   .text_content_wrapper
     .text_content
       %h2
-        Welcome to the NetHack Cross-Variant Summer Tournament site!
+        Welcome to Junethack!
       %p
-        Are you ready to embark the Dungeons of Doom? To kill all your
-        enemies and EAT their corpses? Collect all the treasures the
-        earth has to offer? Ready to challenge the mightiest
-        demons of Gehennom and battle the mighty Wizard of Yendor?
-        BADASS enough to travel the Heavens themselves while kicking
+        Are you ready to embark on a perilous journey through
+        the Dungeons of Doom?
+        Ready to collect all the treasures their chthonic depths have to offer?
+        Ready to kill all your enemies and EAT their corpses?
+        Ready to challenge the mightiest demons of Gehennom and battle
+        the mighty Wizard of Yendor?
+        And BADASS enough to travel the Heavens themselves while kicking
         angels in the face?
       %p
         Then play NetHack.
       %p
-        And also play in the NetHack Cross-Variant Summer Tournament.
+        And also play in Junethack,
+        the NetHack Cross-Variant Summer Tournament (mostly) held in June.
     .text_content.non_top_post
       =haml :news
     .text_content.non_top_post
@@ -45,10 +48,11 @@
         %a{:href => "/archive/2011/index.html"} Junethack 2011
         tournaments.
       %p
-        You can view the tournament rules at the 
+        And the tournament rules at the 
         %a{:href => "/rules"} Rules page.
       %p
-        You can view the competitions and trophies up for grabs at the
+        Or stare longingly at the competitions and trophies up
+        for grabs at the
         %a{:href => "/trophies"} Trophies page.
       %p
         Games played on the servers listed on the
