--- a/views/splash.haml
+++ b/views/splash.haml
@@ -38,9 +38,9 @@
       %p
         And also play in Junethack,
         the NetHack Cross-Variant Summer Tournament (mostly) held in June.
-    .text_content.non_top_post
+    .text_content
       =haml :news
-    .text_content.non_top_post
+    .text_content
       %p
         You can view the results of the
         %a{:href => "/archive/2013/index.html"} Junethack 2013,
@@ -58,7 +58,7 @@
         Games played on the servers listed on the
         %a{:href => "/servers"} Servers page
         are eligible for the tournament.
-    .text_content.non_top_post
+    .text_content
       %h2
         Huh?
       %p
