Refined rules intro, added 1 more rule.

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -5,7 +5,8 @@
         Rules
       %p.description
         Rule violations will be met with dire consequences! Both dire and consequential!
-        Seriously, rules here are pretty reasonable so cheating would be extremely inconsiderate.
+        Seriously, rules here are sensible and even generous;
+        if you decide to cheat, it'll be seen as extremely rude.
         Staff make the final decision if something's not clear.
         Here's what Junethack thinks is cheating.
       %h2
@@ -44,6 +45,8 @@
           exploit well known game bugs (eg, Astral call bug, floating
           wand wresting trick, gold duplication bug, artifact naming trick,
           etc). Some of these may be fixed on some servers.
+        %li
+          make multiple accounts.
         %li
           in general, anything the game says you can do. (whew!)
     %span#end_of_content_spacer.clear
