Modified phrasing of rules.

--- a/views/rules.haml
+++ b/views/rules.haml
@@ -10,7 +10,7 @@
         Staff make the final decision if something's not clear.
         Here's what Junethack thinks is cheating.
       %h2
-        Don't:
+        Please don't:
       %ul
         %li
           crack into a game server and add fake games or bones.
@@ -22,9 +22,9 @@
           use disconnection at critical spots to hide a death from logs.
       %p.description
         And here's what officially isn't cheating.
-        Fellow adventurers may disapprove mightily but Junethack doesn't care.
+        Fellow adventurers may disapprove mightily but as long as it's fun and doesn't hurt other players, Junethack doesn't care.
       %h2
-        Do:
+        Just go ahead:
       %ul
         %li
           %a{:href => "http://nethackwiki.com/wiki/Pudding_farming"}pudding farm.
