Don't display NH-1.3d games as having broken all conducts

--- a/views/clan_games.haml
+++ b/views/clan_games.haml
@@ -25,7 +25,7 @@
         %td{"data-title" => "Server"}= h game.server.url
         %td.table_number{"data-title" => "Points"}= game.points
         %td.table_number{"data-title" => "log"}= game.points.to_s.length-1
-        %td.small_number{"data-title" => "Conducts"}= game.nconducts == 0 ? "yes" : "no"
+        %td.small_number{"data-title" => "Conducts"}= game.version != "NH-1.3d" && game.nconducts == 0 ? "yes" : "no"
         %td.small_cell{"data-title" => "Medusa"}= h game.defeated_medusa? ? "yes" : "no"
         %td.dllink
           -# link to the dumplog of the game if possible
