adding dnethack on dnethack.ilbelkyr.de

--- a/views/servers.haml
+++ b/views/servers.haml
@@ -122,4 +122,17 @@
             kerio
           %td
             &nbsp;
+        %tr
+          %td
+            dnethack.ilbelkyr.de
+          %td
+            %a{:href => "/server/dnh"} DNH
+          %td
+            dnethack
+          %td
+            &nbsp;
+          %td
+            bcode
+          %td
+            &nbsp;
       %span#end_of_content_spacer.clear
