Add DNetHack to the explaining note about "all variants"

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -43,7 +43,7 @@
               King of the World: ascend in all variants.
 
         %p.small_print
-          "All variants" means Vanilla NetHack, SporkHack, UnNetHack, AceHack, GruntHack, NetHack4.
+          "All variants" means Vanilla NetHack, SporkHack, UnNetHack, AceHack, GruntHack, NetHack4, and DNetHack.
           NetHack 1.3d does not contribute to the completion of these trophies.
         .text_content.non_top_post
         %h3
